# cytif

./: .gitignore  channels.csv  orion.py
py/: orion.py
scripts/: crop_pipeline.sh  crop_random.sh  draw_palette.sh  validate_func.sh
src/: Makefile  Makefile.am  Makefile.in  cell.cpp  cell.h  cell2.cpp  cell2.h  channel.cpp  channel.h  configure  configure.ac  cytif.cpp  plot.cpp  plot.h  small.cpp  tiff_cp.cpp  tiff_cp.h  tiff_header.cpp  tiff_header.h  tiff_ifd.cpp  tiff_ifd.h  tiff_image.cpp  tiff_image.h  tiff_reader.cpp  tiff_reader.h  tiff_utils.cpp  tiff_utils.h  tiff_writer.cpp  tiff_writer.h  tiffo.cpp  wips.cpp  wips.h
